--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1134,6 +1134,13 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2000},
   publisher={APS}
 }
+@phdthesis{croenne2009controle,
+  title={Contr{\^o}le de la propagation et du rayonnement {\'e}lectromagn{\'e}tiques par les m{\'e}tamat{\'e}riaux},
+  author={Cro{\"e}nne, Charles},
+  year={2009},
+  school={Universit{\'e} des Sciences et Technologie de Lille-Lille I}
+}
+
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
 @article{zhou2008efficient,
