--- a/intro.tex
+++ b/intro.tex
@@ -165,8 +165,7 @@ $\KK$ 		& Wave vector of the Bloch wave in periodic media\\
 $t$, $\tau$ 		& Time\\
 $c$ 		& Speed of light in vacuum, $c=2.998\cdot 10^8$ m/s \\
 $f(t), F(\omega)$ & A function in the time domain, and in the frequency domain \\
-$\chi_e(t),\chi_m(t)$	& Electric and magnetic susceptibility in the local approximantion \\ %% TODO separate freq-domain and time-domain susc?
-$\chi_e(\omega)$, $\chi_m(\omega)$ 	& Electric and magnetic susceptibility\\
+$\chi_e,\chi_m$	& Electric and magnetic susceptibility in the local approximantion \\
 $\epsrl(\omega), \murl(\omega)$ &Relative permittivity and permeability in the local approximation\\
 $\epsrn(\omega, \kk)$ &Relative permittivity for nonlocal media\\
 $\murn(\omega, \kk)$ &Relative permeability for nonlocal media\\
