--- a/result.tex
+++ b/result.tex
@@ -673,10 +673,13 @@ Standing SPP wave
 
 %====================================================================================================
 \section{Fishnet -- metallic sheet with holes} \label{section_fishnet} % references to ->
-	%Aperture-array transmission
-	%Wood anomaly in slit arrays
+%Aperture-array transmission
+%Wood anomaly in slit arrays
 
+%Babinet principle
+% for nearly flat structures, where most of the fields are confined within a slab perpendicular to $\KK$, a
 
+%surface plasmons, standing/propagating
 
 Perforated plates \cite[p. 58]{brown1953artificial} % http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
 %{{{
@@ -698,4 +701,5 @@ Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1
 
 %====================================================================================================
 \section{Other structures} % plasmonic spheres (note: resonance width determined by gamma of the metal?)
-\begin{figure} \caption{Modes in sphere-wire structure}  \centering \includegraphics[width=10cm]{img/new/modes_Mag_and_El.pdf} \end{figure} \clearpage
+\cite{croenne2009controle}
+
