--- a/title.tex
+++ b/title.tex
@@ -18,7 +18,7 @@ Faculty of Nuclear Sciences and Physical Engineering\\
 
 
  \vfill
-\begin{minipage}{\textwidth}
+\begin{minipage}{.99\textwidth}
 \Large{\textbf{Prague 2015}} \hfill \Large{\textbf{Filip Dominec}}
 \end{minipage}
 
@@ -45,7 +45,7 @@ Studijní program:		&\textbf{Aplikace přírodních věd} \\
 Studijní obor:			&\textbf{Fyzikální inženýrství} \\
 Školitel:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
 Školitel specialista:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
-Akademický rok:			&\textbf{2014/15} \\			%% TODO is this the correct format?
+Akademický rok:			&\textbf{2015/16} \\			%% TODO is this the correct format?
 Počet stran:			&\textbf{\pageref{enddocument}} \\  %% TODO shall give the overall page number or just that of the authored text?
 Klíčová slova			&\textbf{metamateriály, fotonické krystaly, terahertzová technologie, elektrodynamické simulace, homogenizace efektivních prostředí} \\
 \end{tabular}
@@ -66,7 +66,7 @@ Degree Programme:		&\textbf{Application of natural sciences} \\
 Field of Study:			&\textbf{Physical engineering} \\
 Supervisor:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
 Supervisor specialist:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
-Academic Year:			&\textbf{2014/15} \\
+Academic Year:			&\textbf{2015/16} \\
 Number of Pages:		&\textbf{\pageref{enddocument}} \\
 Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, computational electrodynamics, homogenization of effective media} \\
 \end{tabular}
@@ -95,16 +95,12 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \thispagestyle{empty} \newpage
 % --------------------------------------------------------------------------------
 \chapter*{Acknowledgements}
-%% Preparation of this thesis was not prepared without difficulties. However, it appears that overcoming such difficulties is necessary to gain some sort of valuable knowledge and experience that can not be conveyed through textbooks.
-%%
-%%
-%%
-%%
-%%
+Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward, focused work. At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all colleagues who shared these difficulties, namely Dr. Christelle Kadlec, Dr. Ivan Richter, Dr. Petr Ku\v{z}el. The presented work could never be finished without the kind cooperation of many people from the Institute of Physics in Prague and from the Faculty of Nuclear Engineering and Physical sciences, Czech Technical University. 
 
-The numerical results presented could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP programs \cite{johnson2001mpb}. Harmonic inversion was used based on the FDM algorithm \cite{mandelshtam1997harmonic}.
+Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims, and who had understanding my occasional stubborn attitude towards some of their good advices.
 
-This work was supported by the Czech Science Foundation under Grant No. 14-25639S.
+The numerical results presented in the thesis could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP programs \cite{johnson2001mpb}. 
 
+This work was financially supported by the Czech Science Foundation under Grant No. 14-25639S.
 
 \thispagestyle{empty} \newpage
